reshape project to mvp architecture and set check email empty validator

--- a/LoginAppLearnwithXML/app/src/main/res/values/strings.xml
+++ b/LoginAppLearnwithXML/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Login App Learn</string>
+    <string name="email">Email</string>
+    <string name="send_code">Send Code</string>
+    <string name="code">Code</string>
+    <string name="confirm">Confirm</string>
+    <string name="wrong_email">Wrong Email</string>
 </resources>
